shred/csrc/bpe.h

#ifndef __BPE__H__
#define __BPE__H__

#include <stdint.h>

typedef struct Symbol {
  int id;   // cuttent token's id
  struct Symbol* prev;  // previous symbol in word
  struct Symbol* next;  // next symbol in word
} Symbol;

typedef struct wordPos {
  size_t word_index;  // index to word list
  Symbol* pos;    // pointer to first bigram symbol
} wordPos;

typedef struct Info {
  uint64_t freq;   // frequency of a particular pair
  wordPos* positions;   // dynamic Array of occurances
  size_t* pos_capacity;   // capacity of pos[]
  size_t pos_size;  // current no of occurances
  uint32_t version;   // version for lazy validation
} Info;

typedef struct Corpus {
  Symbol** words;   // array of head pointers of each word
  uint64_t* word_counts;  // corresponding freq
  size_t vocab_size;    // no of unique words
} Corpus;

typedef struct {
  size_t target_vocab;    // desired vocab_size
  int32_t unk_id;   // ID to use for unknown tokens
  int num_threads;    // threads for initial counting
} BPEConfig;

typedef struct BpeTrainer BpeTrainer;   // for handling the training part

extern "C" {
  BpeTrainer* bpe_trainer_create(const BPEConfig* config);
  void bpe_trainer_destroy(BpeTrainer* trainer);

  int bpe_loadCorpus(BpeTrainer* trainer, const char* input_path);
  void bpe_initialize(BpeTrainer* trainer);
  void bpe_count_bigrams(BpeTrainer* trainer);
  int bpe_merge(BpeTrainer* trainer);
  int bpe_train(BpeTrainer* trainer);
  int bpe_save(const BpeTrainer* trainer, const char* model_path, const char* vocab_path);
}


#endif  //!__BPE__H__